objects/Batch_Job_Log__c.object
<CustomObject>
    <description>Apex Batch Job Log</description>
    <fields>
        <fullName>Batch_Job_Name__c</fullName>
        <description>Apex Batch Job class name</description>
        <label>Batch Job Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Batch job completed time</description>
        <label>Completed Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Execution_Result__c</fullName>
        <label>Execution Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Batch Job Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Job_Name__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Execution_Result__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BJL-{0000000}</displayFormat>
        <label>Batch Job Log No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>